--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -3,13 +3,15 @@
 # Documentation: https://wowchemy.com/docs/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-# Appearance
+# Appearance - Dark mode only
 
 appearance:
   theme_day: minimal
   theme_night: minimal
   font: minimal
   font_size: L
+  mode: dark
+  mode_toggle: false
 
 # SEO
 
@@ -32,7 +34,7 @@ header:
     align: l
     show_logo: true
     show_language: false
-    show_day_night: true
+    show_day_night: false
     show_search: true
     highlight_active_link: true
 
